--- a/dspace-jspui/src/main/webapp/styles.css
+++ b/dspace-jspui/src/main/webapp/styles.css
@@ -499,7 +499,7 @@ UL { font-family: "verdana", "Arial", "Helvetica", sans-serif;
 
 .help h2{text-align:center;
                 font-size:18pt;
-                color:#000000;}
+                color:#5196b5;font-weight: bold;}
 
 .help h3{font-weight:bold;
          margin-left:0px;}
@@ -512,7 +512,8 @@ UL { font-family: "verdana", "Arial", "Helvetica", sans-serif;
          margin-left:10px;
          line-height:.5;}
 
-.help p {font-size:10pt;}
+.help p {font-size: 13px;
+    line-height: 1.75em;}
 
 .help table{margin-left:8px;
             width:90%;}
@@ -835,3 +836,7 @@ th.accessHeadEven {
     text-decoration: none;
     background: #ffffff; 
 }
+.btn {font-size: 12px !important;} 
+td.leftAlign strong {color: #006696;transition: all 0.5s ease 0s;font-size: 24px;}
+strong {color: #5196B5;}
+body {padding-top: 0 !important;}
