--- a/dspace-jspui/src/main/webapp/styles.css
+++ b/dspace-jspui/src/main/webapp/styles.css
@@ -836,7 +836,20 @@ th.accessHeadEven {
     text-decoration: none;
     background: #ffffff; 
 }
+.btn-group-vertical {width: 60%; margin-left: 20%;margin-top: 15px;}
 .btn {font-size: 12px !important;} 
 td.leftAlign strong {color: #006696;transition: all 0.5s ease 0s;font-size: 24px;}
 strong {color: #5196B5;}
-body {padding-top: 0 !important;}
+body {padding-top: 70px !important;}
+body.help .header {
+    background: rgba(255, 255, 255, 0.95) none repeat scroll 0 0;
+    border-color: #e7e7e7;
+    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.15) inset, 0 1px 5px rgba(0, 0, 0, 0.075);
+    height: 60px !important;
+    left: 0;
+    top: 0;
+    position: fixed;
+    right: 0;
+    margin: 0;
+    z-index: 1030;
+}
